--- a/google/index.html
+++ b/google/index.html
@@ -140,7 +140,8 @@
     }
 
     #br {
-      width: max-content;
+      width: 550px;
+      padding: 0px 17px 0 14px;
       border-radius: 24px;
       border: solid 1px #dfe1e5;
       padding: 0 5px
@@ -300,7 +301,7 @@
         <div id="search" style="margin-top:-5px;">
           <div style="width: max-content;">
             <form>
-              <div id="br" style="width: 550px; padding: 0 17px 0 14px;">
+              <div id="br">
                 <div style="clear: both;"></div>
                 <div id="loupe"><svg focusable="false" xmlns="http://www.w3.org/2000/svg" style="height: 20px;"
                     viewBox="0 0 24 24">
