--- a/google/index.html
+++ b/google/index.html
@@ -141,10 +141,9 @@
 
     #br {
       width: 550px;
-      padding: 0px 17px 0 14px;
+      padding: 0 17px 0 14px;
       border-radius: 24px;
       border: solid 1px #dfe1e5;
-      padding: 0 5px
     }
 
     input:focus {
@@ -327,7 +326,7 @@
                 <div style="clear: both;"></div>
               </div>
               <div style="clear: both;"></div>
-              <div style="float: left;margin-top: 18px; width: 571px; padding-bottom: 13px;">
+              <div style="float: left;margin-top: 18px; width: 570px; padding-bottom: 13px;">
                 <button>Recherche Google</button>
                 <button>J'ai de la chance</button>
               </div>
