--- a/google/index.html
+++ b/google/index.html
@@ -18,14 +18,12 @@
 
       <div id="btn">
         <div style="padding-right: 15px;">
-          <div style="padding-left: 15px;padding-top: 7px;"><a id="connexion"
-              href="https://accounts.google.com/">Connexion</a></div>
-          <div><a onclick="cool()" class="neuf"></a></div>
+          <div style="padding-left: 15px;padding-top: 7px;"><a href="https://www.google.fr/imghp?hl=fr&tab=wi&authuser=0&ogbl">Images</a></div>
+          <div style="padding-top: 7px;"><a href="https://mail.google.com/mail/u/0/?tab=wm&ogbl">Gmail</a></div>
         </div>
         <div style="padding-right: 15px;">
-          <div style="padding-left: 15px;padding-top: 7px;"><a
-              href="https://www.google.fr/imghp?hl=fr&tab=wi&authuser=0&ogbl">Images</a></div>
-          <div style="padding-top: 7px;"><a href="https://mail.google.com/mail/u/0/?tab=wm&ogbl">Gmail</a></div>
+          <div style="padding-left: 15px;padding-top: 7px;"><a id="connexion" href="https://accounts.google.com/">Connexion</a></div>
+          <div><a onclick="cool()" class="neuf"></a></div>
         </div>
       </div>
 
@@ -121,7 +119,7 @@
       </div>
     </div>
   </div>
-  
+
   <div id="footer-main2">
     <div id="footer-top">
       <span id="footer-top">France</span>
