--- a/google/index.html
+++ b/google/index.html
@@ -32,7 +32,7 @@
         </div>
       </div>
 
-      <div id="app">
+      <div id="app" style="visibility: hidden;">
         <iframe id="app2" src="https://jplemonias.github.io/moi/" style="height: 100%; border-radius: 10px; visibility: hidden;"
         ng-non-bindable="" frameborder="0" hspace="0" marginheight="0" marginwidth="0" scrolling="yes"
           tabindex="0" vspace="0" width="100%" role="presentation" id="I0_1585614304087" name="I0_1585614304087">
