--- a/google/index.html
+++ b/google/index.html
@@ -37,7 +37,7 @@
         ng-non-bindable="" frameborder="0" hspace="0" marginheight="0" marginwidth="0" scrolling="yes"
           tabindex="0" vspace="0" width="100%" role="presentation" id="I0_1585614304087" name="I0_1585614304087">
         </iframe>
-        <a href="#" id="close" onclick="cool2()"><i class="far fa-times-circle"></i></a>
+        <a id="close" onclick="cool2()"><i class="far fa-times-circle"></i></a>
       </div>
 
       <center>
