--- a/google/index.html
+++ b/google/index.html
@@ -130,7 +130,7 @@
     <div id="footer-bottom">
       <div id="left">
         <span id="footer-left">
-          <a href="https://support.google.com/websearch/answer/9586983">Publication judiciaire</a>
+          <a href="https://support.google.com/websearch/answer/9586983" style="padding-left: 0;">Publication judiciaire</a>
           <a href="https://support.google.com/websearch/answer/7585859">Info consommateurs</a>
           <a href="https://policies.google.com/privacy?fg=1">Confidentialité</a>
           <a href="https://policies.google.com/terms?fg=1">Conditions</a>
