--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -67,8 +67,8 @@
                     <h2>Partez à l'aventure</h2>
                     <P>Découvrez notre école de surf en peer-learning</P>
                     <div class="row justify-content-center">
-                        <button class="col-4 col-lg-2 mr-2 btn btn-primary btn-lg mw-100">Je m'inscris &agrave; la prochaine session</button>
-                        <button class="col-4 col-lg-2 ml-2 btn btn-secondary btn-lg mw-100">Je découvre le programme</button>
+                        <button class="col-5 mr-2 btn btn-primary btn-lg mw-100">Je m'inscris &agrave; la prochaine session</button>
+                        <button class="col-5 ml-2 btn btn-secondary btn-lg mw-100">Je découvre le programme</button>
                     </div>
                 </div>
             </div>
