--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -73,7 +73,7 @@
                 </div>
             </div>
 
-            <div class="container text-center">
+            <div class="text-center">
                 <h1>The Surfing Project en 3 points</h1>
                 <div class="container">
                     <div class="row">
