--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -6,8 +6,7 @@
     <title>Notre Google</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link href="public/img/bootstrap-solid.svg"
-        rel="shortcut icon">
+    <link href="public/img/bootstrap-solid.svg" rel="shortcut icon">
     <script src="https://kit.fontawesome.com/d70a89f18c.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="public/css/boot.css">
 
@@ -22,70 +21,74 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
-        <style>
-            #bg {
-                height: 500px;
-                background-image: url(public/img/surf.jpg);
-                background-position: center;
-                background-size: cover;
-            }
-        </style>
+    <style>
+        .jumbotron {
+            height: 500px;
+            background-image: url(public/img/surf.jpg);
+            background-position: center;
+            background-size: cover;
+        }
+    </style>
 </head>
 
 <body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-                <a class="navbar-brand" href="#">The Surfing Project</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse"
-                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-
-                <div class="bg collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav mr-auto">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="#">Accueil<span class="sr-only">(current)</span></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Le programme</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                Nos prochaines sessions
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="#">The Surfing Project</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Accueil <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Le programme</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Nos prochaines sessions
+                    </a>
+                    <div style="margin: 0 121px;" class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="#">Janvier</a>
+                        <a class="dropdown-item" href="#">Avril</a>
+                        <a class="dropdown-item" href="#">Juin</a>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </nav>
     <div id="body">
 
         <div id="main">
-            
-            <div id="bg" class="jumbotron">
+
+            <div class="jumbotron">
                 <div class="mx-auto text-center">
                     <h2>Partez à l'aventure</h2>
-                    <P>Découvrez notre école de surf en peer-learning</P>
-                    <div class="row justify-content-center">
-                        <button class="col-5 mr-2 btn btn-primary btn-lg mw-100">Je m'inscris &agrave; la prochaine session</button>
-                        <button class="col-5 ml-2 btn btn-secondary btn-lg mw-100">Je découvre le programme</button>
+                    <P class="mb-2">Découvrez notre école de surf en peer-learning</P>
+                    <div class="row justify-content-center auto">
+                        <button class="btn btn-primary btn-lg mt-2">Je m'inscris à la prochaine session</button>
+                        <button class="ml-2 btn btn-secondary btn-lg mt-2">Je découvre le programme</button>
                     </div>
                 </div>
             </div>
 
             <div class="text-center">
-                <h1>The Surfing Project en 3 points</h1>
+                <h1 class="pb-4">The Surfing Project en 3 points</h1>
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-4 text-center">
                             <h1><i class="fas fa-money-bill-wave-alt fa-2x" aria-hidden="true"></i></h1>
-                            
+
                             <div class="text-center">
                                 <h2>
                                     <p> Pas chère </p>
                                 </h2>
                             </div>
-                            <p>Incenderat autem audaces usque ad insaniam homines ad haec, quae nefariis egere
+                            <p class="text-justify">Incenderat autem audaces usque ad insaniam homines ad haec, quae
+                                nefariis egere
                                 conatibus, Luscus quidam curator urbis subito visus: eosque ut heiulans baiolorum
                                 praecentor ad expediendum quod orsi sunt incitans vocibus crebris. qui haut longe postea
                                 ideo vivus exustus est.</p>
@@ -95,7 +98,8 @@
                             <h2>
                                 <p>Relax</p>
                             </h2>
-                            <p>Ideo urbs venerabilis post superbas efferatarum gentium cervices oppressas latasque leges
+                            <p class="text-justify">Ideo urbs venerabilis post superbas efferatarum gentium cervices
+                                oppressas latasque leges
                                 fundamenta libertatis et retinacula sempiterna velut frugi parens et prudens et dives
                                 Caesaribus tamquam liberis suis regenda patrimonii iura permisit.</p>
                         </div>
@@ -104,7 +108,8 @@
                             <h2>
                                 <p>Communauté</p>
                             </h2>
-                            <p>Et olim licet otiosae sint tribus pacataeque centuriae et nulla suffragiorum certamina
+                            <p class="text-justify">Et olim licet otiosae sint tribus pacataeque centuriae et nulla
+                                suffragiorum certamina
                                 set Pompiliani redierit securitas temporis, per omnes tamen quotquot sunt partes
                                 terrarum, ut domina suscipitur et regina et ubique patrum reverenda cum auctoritate
                                 canities populique Romani nomen circumspectum et verecundum.</p>
@@ -113,75 +118,102 @@
                 </div>
             </div>
             <div class="container">
-                <h1 class="text-center">Témoignages</h1>
+                <h1 class="text-center pb-4">Témoignages</h1>
                 <div class="card-deck">
                     <div class="card">
-                        <img class="card-img-top" src="public/img/femmesurfvague.png" alt="Surfers">
-                        <div class="card-body">
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
-                                to additional content. This content is a little bit longer.</p>
-                            <p class="card-text"><small class="text-muted">Avril 2019</small></p>
+                        <img class="card-img-top" src="public/img/7033bb57d8a652fde30ac6ea75115d7f.jpg" alt="van">
+                        <div class="card-body position-relative">
+                            <p class="card-text mb-5">Cette carte a le texte de support ci-dessous comme une
+                                introduction naturelle
+                                à du contenu supplémentaire.</p>
+                            <p class="card-text position-absolute mb-4" style="bottom: 0px;"><small
+                                    class="text-muted">30 / 03 / 2020</small></p>
                         </div>
                     </div>
                     <div class="card">
-                        <img class="card-img-top" src="public/img/7033bb57d8a652fde30ac6ea75115d7f.jpg" alt="van">
-                        <div class="card-body">
-                            <p class="card-text">This card has supporting text below as a natural lead-in to additional
-                                content.</p>
-                            <p class="card-text"><small class="text-muted">Juin 2019</small></p>
+                        <img class="card-img-top" src="public/img/femmesurfvague.png" alt="Surfers">
+                        <div class="card-body position-relative">
+                            <p class="card-text mb-5">Il s'agit d'une carte plus longue avec le texte de support
+                                ci-dessous
+                                comme une entrée naturelle vers du contenu supplémentaire. Ce contenu est un peu plus
+                                long.</p>
+                            <p class="card-text position-absolute mb-4" style="bottom: 0px;"><small
+                                    class="text-muted">19 / 04 / 2020</small></p>
                         </div>
                     </div>
                     <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-                        <h1>Prix</h1>
-                        <p class="lead">Quickly build an effective pricing table for your potential customers with this
-                            Bootstrap example. It’s built with default Bootstrap components and utilities with little
-                            customization.</p>
+                        <h1 class="pb-4">Prix</h1>
+                        <p class="lead">Créez rapidement un tableau de prix efficace pour vos clients potentiels avec
+                            cet exemple Bootstrap. Il est construit avec des composants et des utilitaires Bootstrap par
+                            défaut avec peu de personnalisation.</p>
                     </div>
 
                     <div class="container">
                         <div class="card-deck mb-3 text-center">
                             <div class="card mb-4 shadow-sm">
                                 <div class="card-header">
-                                    <h4 class="my-0 font-weight-normal">Semaine d'essai</h4>
+                                    <h4 class="my-0 font-weight-normal">Semaine d'introduction</h4>
                                 </div>
                                 <div class="card-body">
-                                    <h1 class="card-title pricing-card-title">0€ <small class="text-muted">/ mo</small>
-                                    </h1>
+                                    <h1 class="card-title pricing-card-title">10€ <small class="text-muted">/
+                                            sem</small>
+                                    </h1><span class="text-small text-muted">
+                                        Paiement en une fois
+                                    </span>
                                     <ul class="list-unstyled mt-3 mb-4">
-                                        <li>Le kiff</li>
-                                        <li>&Agrave; Bali</li>
-                                        <li>Pendant 1 semaine</li>
+                                        <li>Pédagogie révolutionnaire</li>
+                                        <li>Pas de locaux, pas de professeurs</li>
+                                        <li>1 semaine d'intro</li>
+                                        <li><del class="text-muted text-strikethrough">11 semaines fullstack</del></li>
+                                        <li><del class="text-muted text-strikethrough">12 semaines React</del></li>
+                                        <li><del class="text-muted text-strikethrough">Accès à la communauté à vie</del>
+                                        </li>
                                     </ul>
                                     <button type="button"
                                         class="btn btn-lg btn-block btn-outline-primary">S'inscrire</button>
                                 </div>
                             </div>
-                            <div class="card mb-4 shadow-sm">
+                            <div class="card mb-4 shadow-sm position-relative">
+                                <span class="ml-3 badge badge-secondary position-absolute" style="top: -.75rem;">
+                                    Le + populaire
+                                </span>
                                 <div class="card-header">
-                                    <h4 class="my-0 font-weight-normal">Early bird</h4>
+                                    <h4 class="my-0 font-weight-normal">Full StacK Web</h4>
                                 </div>
                                 <div class="card-body">
-                                    <h1 class="card-title pricing-card-title">15€ <small class="text-muted">/ mo</small>
-                                    </h1>
+                                    <h1 class="card-title pricing-card-title">165€ <small class="text-muted">/
+                                            mo</small>
+                                    </h1><span class="text-small text-muted">
+                                        Paiement en trois fois
+                                    </span>
                                     <ul class="list-unstyled mt-3 mb-4">
-                                        <li>Le Kiff</li>
-                                        <li>&Agrave; Bali</li>
-                                        <li>Pendant 12 semaines</li>
+                                        <li>Pédagogie révolutionnaire</li>
+                                        <li>Pas de locaux, pas de professeurs</li>
+                                        <li>1 semaine d'intro</li>
+                                        <li>11 semaines fullstack</li>
+                                        <li><del class="text-muted text-strikethrough">12 semaines React</del></li>
+                                        <li>Accès à la communauté à vie</li>
                                     </ul>
                                     <button type="button" class="btn btn-lg btn-block btn-primary">S'inscrire</button>
                                 </div>
                             </div>
                             <div class="card mb-4 shadow-sm">
                                 <div class="card-header">
-                                    <h4 class="my-0 font-weight-normal">En trois fois</h4>
+                                    <h4 class="my-0 font-weight-normal">Développeur</h4>
                                 </div>
                                 <div class="card-body">
-                                    <h1 class="card-title pricing-card-title"> 7€ <small class="text-muted">/ mo</small>
-                                    </h1>
+                                    <h1 class="card-title pricing-card-title">250€ <small class="text-muted">/
+                                            mo</small>
+                                    </h1><span class="text-small text-muted">
+                                        Paiement en trois fois
+                                    </span>
                                     <ul class="list-unstyled mt-3 mb-4">
-                                        <li>Le kiff</li>
-                                        <li>&Agrave; Bali</li>
-                                        <li>Pendant 12 semaines</li>
+                                        <li>Pédagogie révolutionnaire</li>
+                                        <li>Pas de locaux, pas de professeurs</li>
+                                        <li>1 semaine d'intro</li>
+                                        <li>11 semaines fullstack</li>
+                                        <li>12 semaines React</li>
+                                        <li>Accès à la communauté à vie</li>
                                     </ul>
                                     <button type="button" class="btn btn-lg btn-block btn-primary">S'inscrire</button>
                                 </div>
@@ -196,8 +228,10 @@
 
 </body>
 <footer>
-    <img class="mb-2 ml-2" src="public/img/bootstrap-solid.svg" alt="" width="24" height="24"> <sup style="top: -15px;">&copy;</sup> Bootstrap<sup>&copy;</sup>, et The Surfing Progect.</img>
+    <img class="mb-2 ml-2" src="public/img/bootstrap-solid.svg" alt="" width="24" height="24"> <sup
+        style="top: -15px;">&copy;</sup> Bootstrap<sup>&copy;</sup>, The Surfing Progect, et Moi.</img>
 </footer>
+
 </html>
 <!--Psycho@ctiF-->
 <!------Pe@cE---->
