--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -28,6 +28,8 @@
             background-position: center;
             background-size: cover;
         }
+
+        {flex: 1 0 31%;}
     </style>
 </head>
 
@@ -150,7 +152,7 @@
 
                     <div class="container">
                         <div class="card-deck mb-3 text-center">
-                            <div class="card mb-4 shadow-sm">
+                            <div class="card mb-4 shadow-sm" style="flex: 1 0 47%;">
                                 <div class="card-header">
                                     <h4 class="my-0 font-weight-normal">Semaine d'introduction</h4>
                                 </div>
@@ -170,10 +172,10 @@
                                         </li>
                                     </ul>
                                     <button type="button"
-                                        class="btn btn-lg btn-block btn-outline-primary">S'inscrire</button>
+                                        class="btn btn-lg btn-outline-primary">S'inscrire</button>
                                 </div>
                             </div>
-                            <div class="card mb-4 shadow-sm position-relative">
+                            <div class="card mb-4 shadow-sm position-relative" style="flex: 1 0 47%;">
                                 <span class="ml-3 badge badge-secondary position-absolute" style="top: -.75rem;">
                                     Le + populaire
                                 </span>
@@ -181,7 +183,7 @@
                                     <h4 class="my-0 font-weight-normal">Full StacK Web</h4>
                                 </div>
                                 <div class="card-body">
-                                    <h1 class="card-title pricing-card-title">165€ <small class="text-muted">/
+                                    <h1 class="card-title pricing-card-title">163€ <small class="text-muted">/
                                             mo</small>
                                     </h1><span class="text-small text-muted">
                                         Paiement en trois fois
@@ -194,15 +196,15 @@
                                         <li><del class="text-muted text-strikethrough">12 semaines React</del></li>
                                         <li>Accès à la communauté à vie</li>
                                     </ul>
-                                    <button type="button" class="btn btn-lg btn-block btn-primary">S'inscrire</button>
+                                    <a type="button" href="https://www.thehackingproject.org/courses/code?locale=fr" target="_blank" target="_blank" class="btn btn-lg btn-primary">S'inscrire</a>
                                 </div>
                             </div>
-                            <div class="card mb-4 shadow-sm">
+                            <div class="card mb-4 shadow-sm m-auto" style="flex: 0 0 47%;">
                                 <div class="card-header">
                                     <h4 class="my-0 font-weight-normal">Développeur</h4>
                                 </div>
                                 <div class="card-body">
-                                    <h1 class="card-title pricing-card-title">250€ <small class="text-muted">/
+                                    <h1 class="card-title pricing-card-title">664€ <small class="text-muted">/
                                             mo</small>
                                     </h1><span class="text-small text-muted">
                                         Paiement en trois fois
@@ -215,7 +217,7 @@
                                         <li>12 semaines React</li>
                                         <li>Accès à la communauté à vie</li>
                                     </ul>
-                                    <button type="button" class="btn btn-lg btn-block btn-primary">S'inscrire</button>
+                                    <button type="button" class="btn btn-lg btn-primary">S'inscrire</button>
                                 </div>
                             </div>
                         </div>
