--- a/J5/index.html
+++ b/J5/index.html
@@ -147,7 +147,7 @@
                 </div>
             </div>
             <div class="container">
-                <h1 class="text-center pb-4">Les images</h1>
+                <h1 id="img" class="text-center pb-4">Les images</h1>
                 <div class="card-deck">
                     <div class="card mb-4">
                         <div class="bgrm h300"
@@ -172,7 +172,7 @@
                         </div>
                     </div>
                 </div>
-                <h1 class="text-center pb-4">Les positions</h1>
+                <h1 id="pos" class="text-center pb-4">Les positions</h1>
                 <div class="card-deck">
                     <div class="card mb-4">
                         <div class="bgrm h300" style="background-size: cover;"></div>
