--- a/J5/index.html
+++ b/J5/index.html
@@ -262,7 +262,7 @@
                                 <p class="card-text mb-5">
                                     &lt;img style="height: 300px" src="" alt=""&gt;</p>
                                 <p class="card-text position-absolute mb-4" style="bottom: 0px;"><small
-                                        class="text-muted">30 / 03 / 2020</small></p>
+                                        class="text-muted">BG H.</small></p>
                             </div>
                         </div>
                         <div class="card mb-4">
@@ -272,7 +272,7 @@
                                     &lt;img style="width: 100%" src="" alt=""&gt;
                                     </p>
                                 <p class="card-text position-absolute mb-4" style="bottom: 0px;"><small
-                                        class="text-muted">19 / 04 / 2020</small></p>
+                                        class="text-muted">BG V.</small></p>
                             </div>
                         </div>
                     </div>
