--- a/J5/index.html
+++ b/J5/index.html
@@ -76,9 +76,9 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Nos prochaines sessions
+                        href="#"
                     </a>
-                    <div style="margin: 0 121px;" class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="#img">Les images</a>
                         <a class="dropdown-item" href="#pos">Les positions</a>
                         <a class="dropdown-item" href="#ele">&lt;img&gt;</a>
@@ -137,9 +137,9 @@
                                 <p>Position</p>
                             </h2>
                             <p class="text-justify">Il est possible maintenant de positionner de diverses manières ce
-                                <em>background.</em><br><br>Je vais essayer de vous démontrer quelques exemples... les
+                                <em>background.</em><br><br>Je vais essayer, moi même moussaillon sans prétentions, de vous démontrer quelques exemples... les
                                 annotations
-                                dans cartes sont les valeurs donnant les rendu la class contient deja :<br><br>
+                                dans cartes sont les valeurs donnant les rendu la class contient déjà :<br><br>
                                 <b>background-image: url( SonUrl.png );<br>
                                     height: 300px</b></p>
                         </div>
@@ -257,10 +257,10 @@
                     <h1 class="text-center pb-4">&lt;img&gt;</h1>
                     <div class="card-deck">
                         <div class="card mb-4">
-                            <img class="card-img-top h300" src="rm.png" alt="van">
+                            <img class="card-img-top" src="rm.png" alt="van">
                             <div class="card-body position-relative">
                                 <p class="card-text mb-5">
-                                    &lt;img style="height: 300px" src="" alt=""&gt;</p>
+                                    &lt;img src="" alt=""&gt;</p>
                                 <p class="card-text position-absolute mb-4" style="bottom: 0px;"><small
                                         class="text-muted">BG H.</small></p>
                             </div>
