--- a/J5/index.html
+++ b/J5/index.html
@@ -175,9 +175,9 @@
                 <h1 id="pos" class="text-center pb-4">Les positions</h1>
                 <div class="card-deck">
                     <div class="card mb-4">
-                        <div class="bgrm h300" style="background-size: cover;"></div>
+                        <div class="bgrm h300" style="background-size: cover;background-position: left"></div>
                         <div class="card-body position-relative">
-                            <p class="card-text mb-5">background-size: cover</p>
+                            <p class="card-text mb-5">background-size: cover;<br>background-position: left</p>
                             <p class="card-text position-absolute mb-4" style="bottom: 0px;"><small
                                     class="text-muted">BG H.</small></p>
                         </div>
