--- a/J5/index.html
+++ b/J5/index.html
@@ -6,12 +6,11 @@
     <title>The BackGroud Project For Help Moussaillons</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link href="public/img/bootstrap-solid.svg" rel="shortcut icon">
+    <link href="bootstrap-solid.svg" rel="shortcut icon">
     <script src="https://kit.fontawesome.com/d70a89f18c.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="public/css/boot.css">
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
         crossorigin="anonymous"></script>
@@ -27,10 +26,6 @@
             height: 500px;
             background-position: bottom;
             background-size: cover;
-        }
-
-            {
-            flex: 1 0 31%;
         }
 
         .bgrm {
