--- a/J5/index.html
+++ b/J5/index.html
@@ -89,7 +89,7 @@
             <div id="bg1" class="jumbotron">
                 <div class="mx-auto text-center">
                     <h2>BackGround-img</h2>
-                    <P class="mb-2">Découvrez Comment trouver et comment agit le BackGround-img</P>
+                    <P class="mb-2" style="text-shadow: #fff 1px 0 3px, #fff -1px 0 3px;"><b>Découvrez Comment trouver et comment agit le BackGround-img</b></P>
                     <div class="row justify-content-center auto">
                         <button onclick="orig()" class="btn btn-primary btn-lg mt-2">Image horizontal</button>
                         <button onclick="sec()" class="ml-2 btn btn-secondary btn-lg mt-2">Image verticale</button>
