--- a/J5/index.html
+++ b/J5/index.html
@@ -6,7 +6,8 @@
     <title>The BackGroud Project For Help Moussaillons</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link href="bootstrap-solid.svg" rel="shortcut icon">
+    <link rel="icon" type="image/png" sizes="32x32" href="thp32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="thp16.png">
     <script src="https://kit.fontawesome.com/d70a89f18c.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="public/css/boot.css">
 
