--- a/J5/index.html
+++ b/J5/index.html
@@ -90,7 +90,8 @@
             <div id="bg1" class="jumbotron">
                 <div class="mx-auto text-center">
                     <h2>BackGround-img</h2>
-                    <P class="mb-2" style="text-shadow: #fff 1px 0 3px, #fff -1px 0 3px;"><b>Découvrez Comment trouver et comment agit le BackGround-img</b></P>
+                    <P class="mb-2" style="text-shadow: #fff 1px 0 3px, #fff -1px 0 3px;"><b>Découvrez Comment trouver
+                            et comment agit le BackGround-img</b></P>
                     <div class="row justify-content-center auto">
                         <button onclick="orig()" class="btn btn-primary btn-lg mt-2">Image horizontal</button>
                         <button onclick="sec()" class="ml-2 btn btn-secondary btn-lg mt-2">Image verticale</button>
@@ -133,7 +134,8 @@
                                 <p>Position</p>
                             </h2>
                             <p class="text-justify">Il est possible maintenant de positionner de diverses manières ce
-                                <em>background.</em><br><br>Je vais essayer, moi même moussaillon sans prétentions, de vous démontrer quelques exemples... les
+                                <em>background.</em><br><br>Je vais essayer, moi même moussaillon sans prétentions, de
+                                vous démontrer quelques exemples... les
                                 annotations
                                 dans cartes sont les valeurs donnant les rendu la class contient déjà :<br><br>
                                 <b>background-image: url( SonUrl.png );<br>
@@ -164,7 +166,7 @@
                             <p class="card-text mb-5">BG V.<br><br>background-size: contain;<br>background-position:
                                 center;<br>background-repeat: no-repeat</p>
                             <p class="card-text position-absolute mb-4" style="bottom: 0px;"><small
-                                    class="text-muted">BG H.</small></p>
+                                    class="text-muted">BG V.</small></p>
                         </div>
                     </div>
                 </div>
@@ -212,7 +214,7 @@
                         <div class="card-body position-relative">
                             <p class="card-text mb-5">background-size: cover;<br>background-position: top</p>
                             <p class="card-text position-absolute mb-4" style="bottom: 0px;"><small
-                                    class="text-muted">BG H.</small></p>
+                                    class="text-muted">BG V.</small></p>
                         </div>
                     </div>
                     <div class="card mb-4">
@@ -223,7 +225,7 @@
                             <p class="card-text mb-5">background-size: contain;<br>background-position:
                                 left;<br>background-repeat: no-repeat</p>
                             <p class="card-text position-absolute mb-4" style="bottom: 0px;"><small
-                                    class="text-muted">BG H.</small></p>
+                                    class="text-muted">BG V.</small></p>
                         </div>
                     </div>
                     <div class="card mb-4">
@@ -234,7 +236,7 @@
                             <p class="card-text mb-5">background-size: contain;<br>background-position:
                                 center;<br>background-repeat: no-repeat</p>
                             <p class="card-text position-absolute mb-4" style="bottom: 0px;"><small
-                                    class="text-muted">BG H.</small></p>
+                                    class="text-muted">BG V.</small></p>
                         </div>
                     </div>
                     <div class="card mb-4">
@@ -245,7 +247,7 @@
                             <p class="card-text mb-5">background-size: contain;<br>background-position:
                                 right;<br>background-repeat: no-repeat</p>
                             <p class="card-text position-absolute mb-4" style="bottom: 0px;"><small
-                                    class="text-muted">BG H.</small></p>
+                                    class="text-muted">BG V.</small></p>
                         </div>
                     </div>
                 </div>
@@ -266,7 +268,7 @@
                             <div class="card-body position-relative">
                                 <p class="card-text mb-5">
                                     &lt;img style="width: 100%" src="" alt=""&gt;
-                                    </p>
+                                </p>
                                 <p class="card-text position-absolute mb-4" style="bottom: 0px;"><small
                                         class="text-muted">BG V.</small></p>
                             </div>
