--- a/J5/index.html
+++ b/J5/index.html
@@ -6,8 +6,16 @@
     <title>The BackGroud Project For Help Moussaillons</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <link rel="apple-touch-icon" sizes="120x120" href="thp120.png">
+
+    <link rel="manifest" href="favicon.json">
+    <link rel="mask-icon" href="thp.svg" color="#5bbad5">
+
     <link rel="icon" type="image/png" sizes="32x32" href="thp32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="thp16.png">
+    <link rel="shortcut icon" href="thp.ico">
+    
     <script src="https://kit.fontawesome.com/d70a89f18c.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="public/css/boot.css">
 
