--- a/J5/index.html
+++ b/J5/index.html
@@ -6,18 +6,25 @@
     <title>The BackGroud Project For Help Moussaillons</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+<!--pour LoL-->
+<!--1-->
+    <link rel="apple-touch-icon" sizes="180x180" href="thp180.png">
+<!--2-->
+    <link rel="apple-touch-icon" sizes="120x120" href="thp-precomposed.png">
+<!--3-->
     <link rel="apple-touch-icon" sizes="120x120" href="thp120.png">
-
-    <link rel="manifest" href="favicon.json">
-    <link rel="mask-icon" href="thp.svg" color="#5bbad5">
-
+<!--4-->
     <link rel="icon" type="image/png" sizes="32x32" href="thp32.png">
+<!--5-->
     <link rel="icon" type="image/png" sizes="16x16" href="thp16.png">
+<!--6-->
+    <link rel="manifest" href="favicon.json">
+<!--7-->
+    <link rel="mask-icon" href="thp.svg" color="#5bbad5">
+<!--8-->
     <link rel="shortcut icon" href="thp.ico">
     
     <script src="https://kit.fontawesome.com/d70a89f18c.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="public/css/boot.css">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
